--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,10 @@
             android:label="Write Positive Activity" />
         <activity
             android:name=".BrowseActivity"
-            android:label="Write Positive Activity" />
+            android:label="Browse Activity" />
+        <activity
+            android:name=".PrivacyPolicyActivity"
+            android:label="PrivacyPolicy Activity" />
     </application>
 
 </manifest>
